--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1017,7 +1017,7 @@ footer .social-links li:first-child { margin-left: 0; }
    margin-right: 15px;
 }
 .project-btn{
-   background-color: #1abc9c !important;
+   background-color: #046af0 !important;
 }
 .github-btn{
    background-color: #34495e !important;
